When the label size is too short, the constant for calculating margin_size does not apply. Also nvd3 auto-adjust font-size of axis labels. Temporary solution here: Setting a fixed font-size on nvd3 axis labels and a minimum threshold for label size.

--- a/caravel/assets/visualizations/nvd3_vis.css
+++ b/caravel/assets/visualizations/nvd3_vis.css
@@ -18,6 +18,11 @@ text.nv-axislabel {
 
 .dist_bar svg.nvd3-svg {
   width: auto;
+  font-size: 14px;
+}
+
+.nv-x text{
+  font-size: 12px;
 }
 
 .bar .slice_container {
